# file-fiend

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FileFiend.spec  LEARNINGS.md  LICENSE  Makefile  PROJECT_STATUS.yaml  README.md  build_app.py  compound-engineering.local.md  pyproject.toml  requirements-dev.txt  requirements.txt  unified_media_renamer.py  video_compress.py  year_folder_script.py
.github/workflows/: build-windows.yml  release.yml
app/: main.py
app/core/: constants.py  duplicates.py  renamer.py  runtime.py  (+2 more)
assets/: FileFiend.icns
scripts/: get_ffmpeg.sh
tests/: conftest.py  test_duplicates.py  test_renamer.py  test_year_org.py
todos/: 001-pending-p1-dead-none-branch-get-ffmpeg.md  002-pending-p1-macos-get-ffmpeg-no-hash-verification.md  003-pending-p1-github-actions-not-pinned-to-sha.md  004-pending-p2-urlopen-no-timeout.md  005-pending-p2-requirements-unpinned.md  006-pending-p2-pyinstaller-unpinned-in-ci.md  007-pending-p2-build-app-root-not-resolved.md  008-pending-p2-platform-name-fallthrough.md  009-pending-p3-missing-type-hints-build-scripts.md  010-pending-p3-artifact-retention-explicit.md  011-pending-p1-exif-camera-path-traversal.md  012-pending-p1-renamer-file-type-hardcode.md  013-complete-p2-validate-folder-path-unused.md  014-complete-p2-year-org-list-comprehension-cleanup.md  015-complete-p2-extensions-none-contract-consistency.md  016-complete-p2-extract-build-ext-filter-helper.md  017-complete-p2-progress-cb-type-annotation.md  018-complete-p3-xss-ui-html-escaping.md  019-complete-p3-minor-python-improvements.md
(+15 files in other folders)
