[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501: line too long (handled by formatter)
# SIM105: contextlib.suppress refactor (style choice)
# SIM117: nested with statements (NiceGUI requires separate context managers)
# E731: lambda assignment (acceptable for monkey-patching in renamer.py)
ignore = ["E501", "SIM105", "SIM117", "E731"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]
